--- a/scss/_s-about.scss
+++ b/scss/_s-about.scss
@@ -8,13 +8,9 @@
         margin: 0 auto;
         margin-top: 40px;
 
-        text-align: center;
-
     }
 
     &__img {
-
-
         img {
             width: 80%;
             border-radius: 20px;
